--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -364,7 +364,7 @@ jobs:
         if: always() # even if previous steps fail, this one needs to be run
         uses: actions/upload-artifact@v4
         with:
-          name: vcpkg_logs
+          name: vcpkg_linux_logs
           path: |
             vcpkg-installation/buildtrees/${{ env.PACKAGE_NAME }}/
             build/vcpkg/**/*.log
