--- a/debian/control.in
+++ b/debian/control.in
@@ -18,7 +18,8 @@ Build-Depends:
 		libruis-render-opengl-dev (>= 0.1.63),
 		libruis-render-opengles-dev (>= 0.1.50),
 		libegl1-mesa-dev,
-		libgles2-mesa-dev,
+# TODO: remove, should be transient
+#		libgles2-mesa-dev,
 		libgtk-3-dev,
 		libwayland-dev,
 		libxkbcommon-dev,
