--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,20 +100,15 @@ jobs:
         uses: myci-actions/checkout@main
       - name: set PACKAGE_VERSION
         uses: myci-actions/export-env-var@main
-        with: {name: PACKAGE_VERSION, value: $(myci-deb-version.sh debian/changelog)}
+        with: {name: PACKAGE_VERSION, value: $(myci-deb-version.sh)}
       - name: prepare debian package
         run: myci-deb-prepare.sh
       - name: install deps
         run: myci-deb-install-build-deps.sh
       - name: build
         run: |
+          cd build
           dpkg-buildpackage --unsigned-source --unsigned-changes
-          mv ../*.*deb .
-      # - name: upload deb packages to artifacts
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: ${{ matrix.os }}_${{ matrix.codename }}_${{ matrix.labels[0] }}_debs
-      #     path: "*.*deb"
       - name: deploy deb packages
         run: |
           echo "${{ secrets.MYCI_REPO_SSH_KEY }}" > repo_key_rsa && chmod 600 repo_key_rsa
@@ -190,7 +185,7 @@ jobs:
       uses: myci-actions/checkout@main
     - name: set PACKAGE_VERSION
       uses: myci-actions/export-env-var@main
-      with: {name: PACKAGE_VERSION, value: $(myci-deb-version.sh debian/changelog)}
+      with: {name: PACKAGE_VERSION, value: $(myci-deb-version.sh)}
     - name: add cocoapods repo
       run: pod repo add --silent cppfw https://$MYCI_GIT_USERNAME@github.com/cppfw/cocoapods-repo.git
     - name: install deps
@@ -229,7 +224,7 @@ jobs:
         install: myci
     - name: set PACKAGE_VERSION
       uses: myci-actions/export-env-var@main
-      with: {name: PACKAGE_VERSION, value: $(myci-deb-version.sh debian/changelog)}
+      with: {name: PACKAGE_VERSION, value: $(myci-deb-version.sh)}
     - name: build
       run: |
         cd android
@@ -279,7 +274,7 @@ jobs:
     - name: git clone
       uses: myci-actions/checkout@main
     - name: prepare pacman package
-      run: myci-apply-version.sh --version $(myci-deb-version.sh debian/changelog) msys2/PKGBUILD.in
+      run: myci-apply-version.sh --version $(myci-deb-version.sh) msys2/PKGBUILD.in
     - name: build
       # to make makepkg-mingw build only one architecture we need to set the MINGW_ARCH
       env: {MINGW_ARCH: '${{ matrix.repo }}'}
