--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,9 +13,9 @@
             "group": "build"
         },
         {
-            "label": "build_dbg",
+            "label": "build_dev",
             "type": "shell",
-            "command": "make config=dbg",
+            "command": "make config=dev",
             "problemMatcher": [
                 "$gcc"
             ],
@@ -29,9 +29,9 @@
             "group": "build"
         },
         {
-            "label": "clean_dbg",
+            "label": "clean_dev",
             "type": "shell",
-            "command": "make clean config=dbg",
+            "command": "make clean config=dev",
             "problemMatcher": [],
             "group": "build"
         },
@@ -43,30 +43,30 @@
             "group": "build"
         },
         {
-            "label": "run-app-dbg",
+            "label": "run-app-dev",
             "type": "shell",
-            "command": "make run-app config=dbg",
+            "command": "make run-app config=dev",
             "problemMatcher": [],
             "group": "build"
         },
         {
-            "label": "run-app-sdl-dbg",
+            "label": "run-app-sdl-dev",
             "type": "shell",
-            "command": "make run-app config=dbg sdl=true",
+            "command": "make run-app config=dev sdl=true",
             "problemMatcher": [],
             "group": "build"
         },
         {
-            "label": "run-app-dbg-ogles",
+            "label": "run-app-dev-ogles",
             "type": "shell",
-            "command": "make run-app config=dbg ogles=true",
+            "command": "make run-app config=dev ogles=true",
             "problemMatcher": [],
             "group": "build"
         },
         {
-            "label": "run-app-dbg-ogles-wayland",
+            "label": "run-app-dev-ogles-wayland",
             "type": "shell",
-            "command": "WAYLAND_DISPLAY=$(ls /run/user/$UID/ | grep wayland-[0-9]$) make run-app config=dbg ogles=true wayland=true",
+            "command": "WAYLAND_DISPLAY=$(ls /run/user/$UID/ | grep wayland-[0-9]$) make run-app config=dev ogles=true wayland=true",
             "problemMatcher": [],
             "group": "build"
         },
@@ -79,11 +79,11 @@
             "group": "build"
         },
         {
-            "label": "test-dbg",
+            "label": "test-dev",
             "type": "shell",
-            "command": "make test config=dbg",
+            "command": "make test config=dev",
             "problemMatcher": [],
-            "dependsOn": "build_dbg",
+            "dependsOn": "build_dev",
             "group": "build"
         },
         {
