--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,7 +187,7 @@ jobs:
           repo: deb https://gagis.hopto.org/repo/cppfw/${{ matrix.os }} ${{ matrix.codename }} main
           repo-name: cppfw
           keys-asc: https://gagis.hopto.org/repo/cppfw/pubkey.gpg
-          install: myci git devscripts equivs nodejs libwayland-dev
+          install: myci git devscripts equivs nodejs libwayland-dev clang
       # - name: add llvm repo (for clang-format)
       #   uses: myci-actions/add-deb-repo@main
       #   with:
