--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,15 @@
             "group": "build"
         },
         {
+            "label": "lint",
+            "type": "shell",
+            "command": "make config=lint && make config=lint test",
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build"
+        },
+        {
             "label": "clean-all",
             "type": "shell",
             "command": "make clean-all",
