--- a/src/makefile
+++ b/src/makefile
@@ -110,7 +110,7 @@ $(.RECIPEPREFIX)$(a)$(this_cc) -ObjC++ -c -o "$$$$@" $$(this_cxxflags) $$(OBJCXX
     endif
 
     this_ldlibs += -l ruis$$(this_dbg)
-    this_ldlibs += -l papki$$(this_dbg)
+    this_ldlibs += -l fsif$$(this_dbg)
     this_ldlibs += -l tml$$(this_dbg)
     this_ldlibs += -l utki$$(this_dbg)
 
