--- a/tests/app/makefile
+++ b/tests/app/makefile
@@ -53,7 +53,7 @@ endif
 this_ldlibs += -l tml$(this_dbg)
 this_ldlibs += -l ruis$(this_dbg)
 this_ldlibs += -l utki$(this_dbg)
-this_ldlibs += -l papki$(this_dbg)
+this_ldlibs += -l fsif$(this_dbg)
 this_ldlibs += -l m
 
 ifeq ($(config), emsc)
