--- a/xcode/Podfile
+++ b/xcode/Podfile
@@ -6,7 +6,7 @@ platform :ios, '13.0'
 
 target "ruisapp" do
 	pod 'utki', '>= 1.1.124'
-	pod 'papki', '>= 1.0.93'
+	pod 'fsif', '>= 1.0.93'
 	pod 'r4', '>= 0.1.53'
 	pod 'tml', '>= 0.1.28'
 	pod 'ruis', '>= 0.5.210'
