--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -489,7 +489,7 @@ jobs:
       if: always() # even if previous steps fail, this one needs to be run
       uses: actions/upload-artifact@v4
       with:
-        name: vcpkg_ios_${{ matrix.config }}_logs
+        name: vcpkg_macos_${{ matrix.config }}_logs
         path: |
           vcpkg-installation/buildtrees/${{ env.PACKAGE_NAME }}/
           build/vcpkg/**/*.log
